* re-implementing major portions of threading.  Concurrency can be difficult.